# SEMIC-cpp

./: .gitattributes  .gitignore  0SEMIC-cpp.code-workspace  CMakeLists.txt  README.md  install-SEMIC-cpp.sh  pytest.ini  setup.py
data/: ANT_Mesh.nc
data/IMBIE2/: basinNumbers_8km.exp  imbie_contour2exp.m
data/Prepare/: ANT_InterpERA5_Day_1980.mat
data/SEMIC-ISSM/: test_semic_transect_AlbDenby.nc  test_semic_transect_AlbSlater.nc
data/SEMIC-Krapp2017/: transect_output_denby.txt  transect_output_slater.txt
docs/: Release_note.md
pyseb/: __init__.py  main.py
pyseb/classes/: Model.py
pyseb/geometry/: __init__.py
pyseb/interp/: InterpFromMesh2dToGridScipy.py  __init__.py  interpXarrayGridToMesh.py
pyseb/io/: __init__.py  get_cmip6_modelname.py  load_netcdf.py  loadmodel_netcdf.py  save_netcdf.py
pyseb/utils/: AirDensityFromSpecificHumidity.py  Dewpoint2SpecificHumidity.py  FlagElements.py  TransientTotalTimeSeries.py  VaporPressure.py  __init__.py  cftime2datetime.py  evalMatrix.py  gethostname.py  isnotebook.py  iswindow.py
script/: install-win.bat  install-win.py  plot_runtime.py
script/data/: simba00_openmp_ERA5_runtime.csv
src/: DataArray.h  SemicArray.h  SemicArray.h.bkp  SemicParameters.h  SurfaceEnergyBalance.cpp  SurfaceEnergyBalance.h  example.cpp  libexample.cpp  libpysemic.cpp  main.cpp  pySEMIC.cpp  pybind.cpp
test/: copy-simba20-simba00.py  plot_Results.ipynb  run_OptimizationERA5.ipynb  run_OptimizationERA5.py  run_Prepare.ipynb  run_mon_optimization.sh  run_optimization.sh  run_queue.py  run_semic.py  run_semic_batch.py  run_summary.ipynb  test_SemicForcings.py  test_SemicResults.py  test_SemicStation.ipynb  test_alb_scheme.ipynb  test_pysemic.py
test/cpp/: test_memory.cpp  test_memory_leakage.cpp
test/data/: PSO_day_omega0.6_npop200.json  PSO_mon2_omega0.6_npop100_ampMax10.00.json  PSO_mon2_omega0.6_npop200.json  PSO_mon2_omega0.6_npop200_ampMax10.00.json
test/optimization/: plot_Results.ipynb  run_summary.ipynb
test/src/: load_era5_forcing.py  prepare_semic_day.py
